Fix issue with collapsing popover content
This fixes a regression introduced by the recent refactor of the inserter. It adds a min-width to the popover component. Previously it had a fixed width.

--- a/components/popover/style.scss
+++ b/components/popover/style.scss
@@ -67,6 +67,7 @@
 	box-shadow: $shadow-popover;
 	border: 1px solid $light-gray-500;
 	background: $white;
+	min-width: 240px;
 
 	.components-popover.is-top & {
 		bottom: 100%;
